--- a/index.html
+++ b/index.html
@@ -5,11 +5,11 @@
 
   <meta charset='UTF-8'>
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-  <link rel="shortcut icon" href="img/website.ico">
-  <meta name="description" content="YourDescriptionHere">
-  <meta name="author" content="YourStudentID">
+  <link rel="shortcut icon" href="img/light.ico">
+  <meta name="description" content="Resume">
+  <meta name="author" content="862315332">
 
-  <title>John Doe - Business Administration</title>
+  <title>Vanessa Velado - Elementary Education</title>
 
   <!-- Bootstrap core CSS -->
   <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -27,9 +27,9 @@
 <body id="page-top">
   <nav class="navbar navbar-expand-lg navbar-dark bg-primary fixed-top" id="sideNav">
     <a class="navbar-brand js-scroll-trigger" href="#page-top">
-      <span class="d-block d-lg-none">John Doe</span>
+      <span class="d-block d-lg-none">Vanessa Velado</span>
       <span class="d-none d-lg-block">
-        <img class="img-fluid img-profile rounded-circle mx-auto mb-2" src="img/profilepicture.png" alt="Profile Picture">
+        <img class="img-fluid img-profile rounded-circle mx-auto mb-2" src="img/VanessaVelado (1).jpg" alt="Profile Picture">
       </span>
     </a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -58,26 +58,26 @@
 
     <section class="resume-section p-3 p-lg-5 d-flex align-items-center" id="about">
       <div class="w-100">
-        <h1 class="mb-3">John Doe
+        <h1 class="mb-3">Vanessa Velado
         </h1>
-        <div class="subheading mb-5">Business Administration📚</div>
-        <p class="lead mb-4">Enter bio here<br><br>
+        <div class="subheading mb-5">Elementary Education📚</div>
+        <p class="lead mb-4">Elementary School Teacher<br><br>
 
-        Enter bio here<br><br>
+        Majored in Liberal Studies at the University of California Riverside, extensively experienced in Student Teaching, Tutoring, and Substituting<br><br>
 
-        Enter bio here
+        I, Vanessa Velado, have immersed myself in the pedagogical journey that is training oneself to be the adequate educators, guides, and instructors of future generations. I have forever had the passion for teaching, the patience for understanding, and the determination to use my experience with education to better the experience of succeeding posterity. I firmly believe that the period of elementary education is incredibly significant, for it essetially serves to aid students in building the foundations of their early knowledge and education of which they will continue to build upon as they grow. I have amassed on abundance of documented hours in student and substitute teaching, especailly in ethnically diverse elementary schools, which I, being both Hispanic and bilingual, believe to be particularly capacitated in managing. I'd like to express that my mmost defining characterisitcs are my communication and listening skills, along with my collaborative and adaptability skills. I am waiting, with much excitement, for the opportunity to teach!
         </p>
         <div class="social-icons">
-          <a target="_blank" id="socialicon-1" href="https://linkedin.com">
+          <a target="_blank" id="socialicon-1" href="https://github.com/VanessaVelado">
             <i class="fab fa-linkedin-in"></i>
           </a>
-          <a target="_blank" id="socialicon-2" href="https://github.com">
+          <a target="_blank" id="socialicon-2" href="https://www.youtube.com/">
             <i class="fab fa-github"></i>
           </a>
-          <a target="_blank" id="socialicon-3" href="https://twitter.com">
+          <a target="_blank" id="socialicon-3" href="https://www.google.com/">
             <i class="fab fa-twitter"></i>
           </a>
-          <a target="_blank" id="socialicon-4" href="mailto:youremail@gmail.com">
+          <a target="_blank" id="socialicon-4" href="https://emwfineart.com/">
             <i class="fa fa-envelope"></i>
           </a>
         </div>
@@ -92,12 +92,12 @@
 
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5 experience">
           <div class="resume-content">
-            <h3 class="mb-0">Developer</h3>
+            <h3 class="mb-0">Student Teacher</h3>
             <div class="subheading mb-3"><a target="_blank" href="https://yourcompany.com">Company</a></div>
             <p>
-              • Developed websites for company X<br> 
-              • Speaker at hack-a-thons<br>
-              • Experience with HTML, CSS, Javascript, Photoshop<br>
+              • Volunteering at after-school programs<br> 
+              • Volunteering at elementary counseling offices<br>
+              • Experience with grading and paperwork<br>
             </p>
           </div>
           <div class="resume-date text-md-right">
@@ -107,10 +107,10 @@
 
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5 experience">
           <div class="resume-content">
-            <h3 class="mb-0">Cashier</h3>
+            <h3 class="mb-0">Tutor</h3>
             <div class="subheading mb-3"><a target="_blank" href="https://wholefoods.com">Whole Foods</a></div>
             <p>
-              • Responsible for checking out customers<br>
+              • Responsible for helping students who are struggling academically<br>
               • etc etc<br>
             </p>
           </div>
@@ -152,8 +152,8 @@
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5 education">
           <div class="resume-content">
             <h3 class="mb-0">UC Riverside</h3>
-            <div class="subheading mb-3">Masters of Business Administration</div>
-            <div>MBA in International Business</div>
+            <div class="subheading mb-3">Liberal Studies</div>
+            <div>MBA in Elementary Education</div>
           </div>
           <div class="resume-date text-md-right">
             <span class="text-primary">August 2018 - December 2019</span>
@@ -163,8 +163,8 @@
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5 education">
           <div class="resume-content">
             <h3 class="mb-0">University of California Riverside</h3>
-            <div class="subheading mb-3">Postgraduate Certificate in Business Management</div>
-            <div>Project Management</div>
+            <div class="subheading mb-3">Postgraduate Certificate in Elementary Education</div>
+            <div>Early Childhood Education</div>
           </div>
           <div class="resume-date text-md-right">
             <span class="text-primary">June 2017</span>
@@ -174,7 +174,7 @@
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5 education">
           <div class="resume-content">
             <h3 class="mb-0">University of California Riverside</h3>
-            <div class="subheading mb-3">Business Administration</div>
+            <div class="subheading mb-3">Teaching</div>
             <div>Information Systems</div>
           </div>
           <div class="resume-date text-md-right">
@@ -191,7 +191,10 @@
       <div class="w-100">
         <h2 class="mb-5">Portfolio</h1>
         <center>
-            <img src="img/image2.jpeg" width="500px">
+                <img src="img/image1 (1).jpg" width="500px">
+                <img src="img/image2 (1).jpeg" width="500px"><br>
+                <img src="img/image3 (1).jpg" width="500px">
+                <img src="img/image4 (1).jpg" width="500px"><br>
         </center>
       </div>
     </section>
@@ -199,7 +202,7 @@
     <hr class="m-0">
     <center>&copy; <script type="text/javascript">
   document.write(new Date().getFullYear());
-  </script> John Doe</center><br>
+  </script> Vanessa Velado</center><br>
   </div>
   <!-- Bootstrap core JavaScript -->
   <script src="vendor/jquery/jquery.min.js"></script>
